force-app/main/default/objects/LPCR_BaremeCAF__c/LPCR_BaremeCAF__c.object-meta.xml
<CustomObject>
    <label>Barème CAF</label>
    <nameField>
        <displayFormat>BCAF-{00000}</displayFormat>
        <label>Barème CAF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Barèmes CAF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>