force-app/main/default/objects/LPCR_BaremeCAF__c/fields/LPCR_DateEffet__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateEffet__c</fullName>
    <label>Date d’effet </label>
    <type>Date</type>
</CustomField>