force-app/main/default/objects/LPCR_BaremeCAF__c/fields/LPCR_DateFin__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateFin__c</fullName>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>