force-app/main/default/objects/LPCR_BaremeCAF__c/fields/LPCR_NombresEnfants__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombresEnfants__c</fullName>
    <label>Nombre d’enfant(s)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>