force-app/main/default/objects/LPCR_BaremeCAF__c/fields/LPCR_RessourcePlancher__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RessourcePlancher__c</fullName>
    <label>Ressource Plancher </label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>