force-app/main/default/objects/LPCR_BaremeCAF__c/fields/LPCR_TauxEffortParEnfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TauxEffortParEnfant__c</fullName>
    <label>Taux d’effort par enfant(s) </label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>