force-app/main/default/objects/LPCR_BaremeCAF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LPCR_DateDebut__c</columns>
    <columns>LPCR_DateFin__c</columns>
    <columns>LPCR_NombresEnfants__c</columns>
    <columns>LPCR_RessourcePlancher__c</columns>
    <columns>LPCR_RessourcePlafond__c</columns>
    <columns>LPCR_TauxEffortParEnfant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>